--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -2,9 +2,24 @@
     float: left;
     width: 200px;
 }
+
+.logo{
+    width: 150px;
+    margin: 0 auto;
+    display: block;
+}
+
+.github-link {
+    padding-top: 30px;
+    margin: 0 auto;
+    width: 150px;
+    text-align: center;
+    display: block;
+}
+
 .navbar {
+    margin-top: 30px;
     width: 100%;
-    height: 100vh;
 }
 .nav-item {
     height: 2em;
