--- a/src/style/main.css
+++ b/src/style/main.css
@@ -6,6 +6,15 @@ body {
     width: 100%;
 }
 
+.err-page {
+    position: absolute;
+    top: 100px;
+    margin-left: 40px;
+    font-size: 40px;
+    font-weight: bolder;
+    color: red;
+}
+
 .canvas-container {
     float: left;
     box-sizing: border-box;
